--- a/CathodeLib/Properties/Resources.resx
+++ b/CathodeLib/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="composite_entity_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\nodedbs\composite_entity_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="composite_paths" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\nodedbs\composite_paths.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
