--- a/CathodeLib/Properties/Resources.resx
+++ b/CathodeLib/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="entity_parameter_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NodeDBs\entity_parameter_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="sound_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sound_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
