--- a/CathodeLib/Properties/Resources.resx
+++ b/CathodeLib/Properties/Resources.resx
@@ -131,6 +131,6 @@
     <value>..\Resources\NodeDBs\entity_parameter_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="sound_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sound_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\sound_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
