--- a/CathodeLib/Properties/Resources.resx
+++ b/CathodeLib/Properties/Resources.resx
@@ -130,8 +130,8 @@
   <data name="composite_paths" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NodeDBs\composite_paths.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="entity_parameter_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NodeDBs\entity_parameter_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="cathode_shortguid_lut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NodeDBs\cathode_shortguid_lut.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="sound_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sound_names.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
